Fix: fixed swagger docs for new endpoints
